# code-to-radiative-forcing-by-super-volcano-eruptions

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  README.md  justfile  noxfile.py  pyproject.toml
.github/release-please/: release-please-config.json
.github/workflows/: release.yml  tests.yml
src/paper1_code/: __init__.py  config.py  extra.mplstyle  jgr.mplstyle
src/paper1_code/load/: __init__.py  b20.py  cesm2.py  e13.py  g16.py  j05.py  m14.py  m20.py  mcg24.py  ob16.py  osi20.py  pinatubo.py  python-ucar.cgd.ccsm4.cesmLME.atm.proc.daily_ave.FSNTOA-20240103T0650.py  python-ucar.cgd.ccsm4.cesmLME.atm.proc.daily_ave.TREFHT-20240103T0651.py  r09.py  t10.py  tambora.py
src/paper1_code/scripts/: __init__.py  calculate_climate_resistance.py  gen_fig1.py  gen_fig1_2.py  gen_fig2.py  gen_fig3.py  gen_fig4.py  gen_fig5.py  gen_figs.py  load_data.py  supp_fig1.py  supp_fig2.py
src/paper1_code/utils/: __init__.py  find_c2w_files.py  fourier.py  if_save.py  load_auto.py  misc.py  reff.py  time_series.py
tests/: test_config.py  test_zenodo.py
